--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,14 +21,22 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
+
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+
     compile 'com.android.support:recyclerview-v7:25.3.0'
     compile 'com.android.support:cardview-v7:25.3.0'
 
+    compile 'com.google.dagger:dagger:2.8'
+    provided 'com.google.dagger:dagger-compiler:2.8'
+
     testCompile 'junit:junit:4.12'
     testCompile 'com.squareup.okhttp3:mockwebserver:3.6.0'
+
+    androidTestCompile 'org.mockito:mockito-android:2.7.15'
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
