--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     testCompile 'com.squareup.okhttp3:mockwebserver:3.6.0'
-    testCompile 'org.robolectric:robolectric:3.1.4'
+    testCompile "org.robolectric:robolectric:3.3.2"
     testCompile 'org.mockito:mockito-core:1.10.19'
 
     androidTestCompile 'org.mockito:mockito-android:2.7.15'
