--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,9 @@ android {
     lintOptions {
         abortOnError false
     }
+    packagingOptions {
+        exclude 'META-INF/rxjava.properties'
+    }
 }
 
 dependencies {
@@ -29,12 +32,15 @@ dependencies {
 
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
 
     compile 'com.android.support:recyclerview-v7:25.3.0'
     compile 'com.android.support:cardview-v7:25.3.0'
 
-    compile 'com.google.dagger:dagger:2.8'
-    provided 'com.google.dagger:dagger-compiler:2.8'
+    compile 'com.google.dagger:dagger:2.7'
+    provided 'com.google.dagger:dagger-compiler:2.7'
+
+    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
 
     testCompile 'junit:junit:4.12'
     testCompile 'com.squareup.okhttp3:mockwebserver:3.6.0'
